--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <div class="title">Running Dashboard</div>
         <div class="status">
           <span class="status-dot"></span>
-          <span id="connection-status">Connected to Strava</span>
+          <span id="connection-status">Connected</span>
         </div>
       </div>
       <div class="clock">
@@ -213,7 +213,7 @@
           <span class="small">km</span>
         </div>
         <div class="card-sub">
-          <span id="range-runs">0</span> runs in selected range
+          <span id="range-runs">0</span> runs in range
         </div>
       </div>
 
@@ -225,7 +225,7 @@
           <span class="small">per kilometer</span>
         </div>
         <div class="card-sub">
-          Average pace for runs in selected range
+          Average pace for range
         </div>
       </div>
 
@@ -237,7 +237,7 @@
           <span class="small">kilometers</span>
         </div>
         <div class="card-sub">
-          Longest single run in selected range
+          Longest single run in range
         </div>
       </div>
 
@@ -249,7 +249,7 @@
           <span class="small">this range</span>
         </div>
         <div class="card-sub">
-          Estimated calories from runs (Strava kilojoules where available)
+          Estimated calories from runs 
         </div>
       </div>
 
@@ -261,7 +261,7 @@
           <span class="small">kilometers</span>
         </div>
         <div class="card-sub">
-          Total run distance in approximately last 30 days
+          Total run distance (30 days)
         </div>
       </div>
 
@@ -272,7 +272,7 @@
           <span id="all-runs">0</span>
         </div>
         <div class="card-sub">
-          All-time runs pulled from Strava
+          All-time runs
         </div>
       </div>
 
@@ -284,7 +284,7 @@
           <span class="small">kilometers</span>
         </div>
         <div class="card-sub">
-          Sum of all run distances returned by Strava
+          Sum of all runs
         </div>
       </div>
 
