--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         <div class="card-title">Calories Burned</div>
         <div class="card-main">
           <span id="calories">0</span>
-          <span class="small">this range</span>
+          <span class="small"></span>
         </div>
         <div class="card-sub">
           Estimated calories from runs 
