--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
       <!-- Placeholder / spare card -->
       <div class="card" id="running-quote-card">
-        <div class="card-title">Quotes</div>
+        <div class="card-title">Coach Bennett</div>
         <div class="card-sub">
           <h3 class="running-quote-text" id="running-quote-text">Loading…</h3>
           <div class="running-quote-author" id="running-quote-author"></div>
