--- a/index.html
+++ b/index.html
@@ -170,6 +170,33 @@
       font-size: 0.9rem;
       opacity: 0.8;
     }
+
+    body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "SF Pro Text",
+    sans-serif;
+  background: radial-gradient(circle at top left, #262a3d, #050609 55%);
+  color: var(--text);
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;      /* new: keep content near top but adjustable */
+  padding: 40px 32px 32px;      /* was 24px; more top padding */
+}
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 20px; /* slightly larger gaps */
+}
+.card {
+  background: var(--bg-card);
+  border-radius: 16px;
+  padding: 18px 20px;
+  min-height: 120px; /* ensure cards have some height */
+  box-shadow: 0 18px 40px rgba(0, 0, 0, 0.55);
+  position: relative;
+  overflow: hidden;
+}
+
   </style>
 </head>
 <body>
