--- a/index.html
+++ b/index.html
@@ -196,6 +196,9 @@
   position: relative;
   overflow: hidden;
 }
+.card-quote {
+  grid-column: span 2;
+}
 
   </style>
 </head>
@@ -316,7 +319,7 @@
       </div>
 
       <!-- Placeholder / spare card -->
-      <div class="card" id="running-quote-card">
+      <div class="card card-quote" id="running-quote-card">
         <div class="card-title">Coach Bennett</div>
         <div class="card-sub">
           <h3 class="running-quote-text" id="running-quote-text">Loading…</h3>
