--- a/index.html
+++ b/index.html
@@ -319,13 +319,25 @@
       </div>
 
       <!-- Placeholder / spare card -->
-      <div class="card card-quote" id="running-quote-card">
-        <div class="card-title">Coach Bennett</div>
-        <div class="card-sub">
-          <h3 class="running-quote-text" id="running-quote-text">Loading…</h3>
-          <div class="running-quote-author" id="running-quote-author"></div>
-        </div>
+     <div class="card card-quote">
+  <div class="quote-content">
+    <div>
+      <div class="card-title">Coach Bennett</div>
+      <div class="card-main">
+        Every run has a purpose.
       </div>
+      <div class="card-sub">
+        Rotate this quote with others if you like.
+      </div>
+    </div>
+    <img
+      class="quote-image"
+      src="https://raw.githubusercontent.com/c15c/stravarun/refs/heads/main/bennetthead.png"
+      alt="Coach Bennett"
+    />
+  </div>
+</div>
+
     </div>
   </div>
 
