--- a/index.html
+++ b/index.html
@@ -199,6 +199,15 @@
 .card-quote {
   grid-column: span 2;
 }
+.quote-image {
+  max-width: 35%;        /* take up at most ~1/3 of the card width */
+  max-height: 80px;      /* cap the height so the card doesn’t grow too tall */
+  height: auto;
+  width: auto;
+  object-fit: contain;
+  border-radius: 50%;
+}
+
 
   </style>
 </head>
