--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       min-height: 100vh;
       display: flex;
       justify-content: center;
-      padding: 24px;
+      align-items: flex-start;
+      padding: 40px 32px 32px;
     }
     .dashboard {
       max-width: 1200px;
@@ -32,10 +33,10 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 24px;
+      margin-bottom: 16px;
     }
     .title {
-      font-size: 28px;
+      font-size: 24px;
       font-weight: 700;
     }
     .status {
@@ -97,13 +98,14 @@
 
     .grid {
       display: grid;
-      grid-template-columns: repeat(4, minmax(0, 1fr));
-      gap: 16px;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 20px;
     }
     .card {
       background: var(--bg-card);
       border-radius: 16px;
-      padding: 16px 18px;
+      padding: 18px 20px;
+      min-height: 120px;
       box-shadow: 0 18px 40px rgba(0, 0, 0, 0.55);
       position: relative;
       overflow: hidden;
@@ -141,6 +143,29 @@
       margin-top: 8px;
     }
 
+    /* Quote card layout */
+    .card-quote {
+      grid-column: span 2;
+    }
+    .quote-inner {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 12px;
+    }
+    .quote-text {
+      flex: 1 1 auto;
+    }
+    .quote-image {
+      flex: 0 0 auto;
+      max-height: 72px;
+      max-width: 72px;
+      height: auto;
+      width: auto;
+      object-fit: contain;
+      border-radius: 50%;
+    }
+
     @media (max-width: 900px) {
       .grid {
         grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -151,6 +176,9 @@
       .grid {
         grid-template-columns: 1fr;
       }
+      .card-quote {
+        grid-column: span 1;
+      }
       header {
         flex-direction: column;
         align-items: flex-start;
@@ -160,55 +188,6 @@
         text-align: left;
       }
     }
-      .running-quote-text {
-      font-size: 1.25rem;
-      line-height: 1.4;
-      margin: 0;
-    }
-
-    .running-quote-author {
-      font-size: 0.9rem;
-      opacity: 0.8;
-    }
-
-    body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "SF Pro Text",
-    sans-serif;
-  background: radial-gradient(circle at top left, #262a3d, #050609 55%);
-  color: var(--text);
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;      /* new: keep content near top but adjustable */
-  padding: 40px 32px 32px;      /* was 24px; more top padding */
-}
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-  gap: 20px; /* slightly larger gaps */
-}
-.card {
-  background: var(--bg-card);
-  border-radius: 16px;
-  padding: 18px 20px;
-  min-height: 120px; /* ensure cards have some height */
-  box-shadow: 0 18px 40px rgba(0, 0, 0, 0.55);
-  position: relative;
-  overflow: hidden;
-}
-.card-quote {
-  grid-column: span 2;
-}
-.quote-image {
-  max-width: 35%;        /* take up at most ~1/3 of the card width */
-  max-height: 80px;      /* cap the height so the card doesn’t grow too tall */
-  height: auto;
-  width: auto;
-  object-fit: contain;
-  border-radius: 50%;
-}
-
-
   </style>
 </head>
 <body>
@@ -264,7 +243,7 @@
           <span class="small">per kilometer</span>
         </div>
         <div class="card-sub">
-          Average pace for range
+          Average pace for runs in selected range
         </div>
       </div>
 
@@ -276,7 +255,7 @@
           <span class="small">kilometers</span>
         </div>
         <div class="card-sub">
-          Longest single run in range
+          Longest single run in selected range
         </div>
       </div>
 
@@ -285,14 +264,14 @@
         <div class="card-title">Calories Burned</div>
         <div class="card-main">
           <span id="calories">0</span>
-          <span class="small"></span>
+          <span class="small">this range</span>
         </div>
         <div class="card-sub">
-          Estimated calories from runs 
+          Estimated calories from runs (Strava kilojoules where available)
         </div>
       </div>
 
-      <!-- This Month (last 30 days) -->
+      <!-- This Month (approx last 30 days) -->
       <div class="card">
         <div class="card-title">This Month</div>
         <div class="card-main">
@@ -300,7 +279,7 @@
           <span class="small">kilometers</span>
         </div>
         <div class="card-sub">
-          Total run distance (30 days)
+          Total run distance in approximately last 30 days
         </div>
       </div>
 
@@ -311,7 +290,7 @@
           <span id="all-runs">0</span>
         </div>
         <div class="card-sub">
-          All-time runs
+          All-time runs pulled from Strava
         </div>
       </div>
 
@@ -323,34 +302,57 @@
           <span class="small">kilometers</span>
         </div>
         <div class="card-sub">
-          Sum of all runs
+          Sum of all runs returned by Strava
         </div>
       </div>
 
-      <!-- Placeholder / spare card -->
-     <div class="card card-quote">
-  <div class="quote-content">
-    <div>
-      <div class="card-title">Coach Bennett</div>
-      <div class="card-main">
-        Every run has a purpose.
+      <!-- Quote card -->
+      <div class="card card-quote">
+        <div class="quote-inner">
+          <div class="quote-text">
+            <div class="card-title">Coach Bennett</div>
+            <div class="card-main" id="quote-text">
+              Every run has a purpose.
+            </div>
+            <div class="card-sub" id="quote-sub"></div>
+          </div>
+          <img
+            class="quote-image"
+            src="https://raw.githubusercontent.com/c15c/stravarun/refs/heads/main/bennetthead.png"
+            alt="Coach Bennett"
+          />
+        </div>
       </div>
-      <div class="card-sub">
-        Rotate this quote with others if you like.
-      </div>
-    </div>
-    <img
-      class="quote-image"
-      src="https://raw.githubusercontent.com/c15c/stravarun/refs/heads/main/bennett_head.png"
-      alt="Coach Bennett"
-    />
-  </div>
-</div>
-
     </div>
   </div>
 
   <script>
+    const runningQuotes = [
+      "Every finish line is a starting line in disguise",
+      "We do hard things not so they become easy, but so we can take on even harder things",
+      "You can get better at running, while not running",
+      "If you aren't running, you are recovering",
+      "Celebrate!",
+      "This is about running, and it's also not about running",
+      "Easy runs should feel easy",
+      "Run smart",
+      "There are no guarantees when you cross the starting line",
+      "You are a bad-ass!",
+      "Running isn't boring, but some runners are.",
+      "Play at running.",
+      "Release the Kraken!",
+      "We don't race to prove we're runners, we race to celebrate being runners.",
+      "Count your victories in as many ways as you can",
+      "Every run has a purpose."
+    ];
+
+    function setRandomQuote() {
+      const quoteEl = document.getElementById('quote-text');
+      if (!quoteEl || runningQuotes.length === 0) return;
+      const idx = Math.floor(Math.random() * runningQuotes.length);
+      quoteEl.textContent = runningQuotes[idx];
+    }
+
     function updateClock() {
       const now = new Date();
       const timeEl = document.getElementById('clock-time');
@@ -366,26 +368,24 @@
     }
 
     function setDefaultRange() {
-  const startInput = document.getElementById('start-date');
-  const endInput = document.getElementById('end-date');
-  if (!startInput || !endInput) return;
+      const startInput = document.getElementById('start-date');
+      const endInput = document.getElementById('end-date');
+      if (!startInput || !endInput) return;
 
-  const today = new Date();
+      const today = new Date();
+      const day = today.getDay(); // 0=Sun,1=Mon,...6=Sat
+      const diffToMonday = (day + 6) % 7;
 
-  const day = today.getDay(); // 0=Sun,1=Mon,...6=Sat
-  const diffToMonday = (day + 6) % 7;
+      const monday = new Date(
+        today.getFullYear(),
+        today.getMonth(),
+        today.getDate() - diffToMonday,
+        0, 0, 0, 0
+      );
 
-  const monday = new Date(
-    today.getFullYear(),
-    today.getMonth(),
-    today.getDate() - diffToMonday,
-    0, 0, 0, 0
-  );
-
-  endInput.value = today.toISOString().slice(0, 10);      // today
-  startInput.value = monday.toISOString().slice(0, 10);   // this Monday
-}
-
+      endInput.value = today.toISOString().slice(0, 10);
+      startInput.value = monday.toISOString().slice(0, 10);
+    }
 
     function updateRangeLabel(range) {
       const label = document.getElementById('range-label');
@@ -416,16 +416,15 @@
         }
         const data = await res.json();
 
-        // Update range label
         updateRangeLabel(data.range);
 
         const s = data.summary || {};
         const activities = data.activities || [];
 
         document.getElementById('range-km').textContent =
-          (s.totalKm ?? 0).toFixed ? s.totalKm.toFixed(1) : s.totalKm || '0.0';
+          s.totalKm != null ? s.totalKm.toFixed(1) : '0.0';
         document.getElementById('range-runs').textContent =
-          s.totalRuns ?? activities.length ?? 0;
+          s.totalRuns != null ? s.totalRuns : activities.length || 0;
         document.getElementById('avg-pace').textContent =
           s.avgPacePerKm || 'N/A';
         document.getElementById('longest-run').textContent =
@@ -438,7 +437,6 @@
         document.getElementById('all-runs').textContent =
           s.allTimeRuns != null ? s.allTimeRuns.toString() : '0';
 
-        // Approximate "this month" as last 30 days using activities we already have
         const monthKmEl = document.getElementById('month-km');
         if (monthKmEl) {
           const now = Date.now();
@@ -460,12 +458,14 @@
 
     document.addEventListener('DOMContentLoaded', () => {
       setDefaultRange();
+      setRandomQuote();
       updateClock();
-      setInterval(updateClock, 30 * 1000); // update every 30s
+      setInterval(updateClock, 30 * 1000);
 
       const apply = document.getElementById('apply-range');
       if (apply) {
         apply.addEventListener('click', () => {
+          setRandomQuote();
           fetchData();
         });
       }
@@ -473,33 +473,5 @@
       fetchData();
     });
   </script>
-  <script>
-  const runningQuotes = [
-    "Every finish line is a starting line in disguise",
-    "We do hard things not so they become easy, but so we can take on even harder things",
-    "You can get better at running, while not running",
-    "If you aren't running, you are recovering",
-    "Celebrate!",
-    "This is about running, and it's also not about running",
-    "Easy runs should feel easy",
-    "Run smart",
-    "There are no guarantees when you cross the starting line",
-    "You are a bad-ass!",
-    "Running isn't boring, but some runners are.",
-    "Play at running.",
-    "Release the Kraken!",
-    "We don't race to prove we're runners, we race to celebrate being runners.",
-    "Count your victories in as many ways as you can",
-    "Every run has a purpose."
-  ];
-
-  function setRandomRunningQuote() {
-    const quote = runningQuotes[Math.floor(Math.random() * runningQuotes.length)];
-    document.getElementById("running-quote-text").textContent = quote;
-    document.getElementById("running-quote-author").textContent = ""; // No authors needed
-  }
-
-  document.addEventListener("DOMContentLoaded", setRandomRunningQuote);
-</script>
 </body>
 </html>
