--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
           <span class="small">per kilometer</span>
         </div>
         <div class="card-sub">
-          Average pace for runs in selected range
+          Average pace for range
         </div>
       </div>
 
@@ -255,7 +255,7 @@
           <span class="small">kilometers</span>
         </div>
         <div class="card-sub">
-          Longest single run in selected range
+          Longest single run in range
         </div>
       </div>
 
@@ -264,10 +264,10 @@
         <div class="card-title">Calories Burned</div>
         <div class="card-main">
           <span id="calories">0</span>
-          <span class="small">this range</span>
+          <span class="small"></span>
         </div>
         <div class="card-sub">
-          Estimated calories from runs (Strava kilojoules where available)
+          Estimated calories from runs
         </div>
       </div>
 
@@ -279,7 +279,7 @@
           <span class="small">kilometers</span>
         </div>
         <div class="card-sub">
-          Total run distance in approximately last 30 days
+          Total run distance (30 days)
         </div>
       </div>
 
@@ -290,7 +290,7 @@
           <span id="all-runs">0</span>
         </div>
         <div class="card-sub">
-          All-time runs pulled from Strava
+          All-time runs
         </div>
       </div>
 
@@ -302,7 +302,7 @@
           <span class="small">kilometers</span>
         </div>
         <div class="card-sub">
-          Sum of all runs returned by Strava
+          Sum of all runs
         </div>
       </div>
 
