--- a/index.html
+++ b/index.html
@@ -188,6 +188,10 @@
         text-align: left;
       }
     }
+  .card-quote .card-main {
+  font-size: 24px;   /* try 22–24px; adjust to taste */
+  line-height: 1.3;
+}
   </style>
 </head>
 <body>
