--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
       </div>
 
       <!-- This Month (approx last 30 days) -->
-      <div class="card">
+      <div class="card card-highlight">
         <div class="card-title">This Month</div>
         <div class="card-main">
           <span id="month-km">0.0</span>
@@ -287,7 +287,7 @@
       </div>
 
       <!-- All-time runs -->
-      <div class="card">
+      <div class="card card-highlight">
         <div class="card-title">Total Runs</div>
         <div class="card-main">
           <span id="all-runs">0</span>
