--- a/index.html
+++ b/index.html
@@ -202,6 +202,31 @@
   100% { transform: rotate(0deg); }
 }
 
+document.addEventListener('DOMContentLoaded', () => {
+  setDefaultRange();
+  setRandomQuote();
+  updateClock();
+  setInterval(updateClock, 30 * 1000);
+
+  const apply = document.getElementById('apply-range');
+  if (apply) {
+    apply.addEventListener('click', () => {
+      setRandomQuote();
+      fetchData();
+    });
+  }
+
+  // NEW: tap Bennett's head to refresh data + quote
+  const bennettHead = document.querySelector('.quote-image');
+  if (bennettHead) {
+    bennettHead.addEventListener('click', () => {
+      setRandomQuote();
+      fetchData();
+    });
+  }
+
+  fetchData();
+});
 
     
   </style>
